# meu-zig

./: .#zigarraytest.py  build_zig.py  main  main.zig  pyarraytest.py  pyproject.toml  requeriments.txt  zigarraytest.py  ziglangpython.py  ziglangpythontest.py
.zig-cache/o/5d286b9066272898eaedfdcb13357e7b/: meu-zig
